<resources>
    <string name="app_name">Tute3</string>
    <string name="tv_num1">Number 1</string>
    <string name="tv_num2">Number 2</string>
    <string name="et_n1" />
    <string name="et_n2" />
    <string name="btn_ok">OK</string>
    <string name="btn_plus">+</string>
    <string name="btn_divide">/</string>
    <string name="btn_minus">-</string>
    <string name="btn_mult">*</string>
    <string name="tv_answer" />
    <string name="et_toast">Opening Calculator</string>
</resources>